testing/tests/ui/let_destructuring_has_rest.stderr
error: unexpected `,` character after `..`
       failed to parse template source at row 2, column 20 near:
       ", } = x -%}hello {{ a }}{%- endif -%}\n"
  --> tests/ui/let_destructuring_has_rest.rs:16:10
   |
16 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: failed to parse template source at row 2, column 17 near:
       ".. } = x -%}hello {{ a }}{%- endif -%}\n"
  --> tests/ui/let_destructuring_has_rest.rs:24:10
   |
24 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0609]: no field `a` on type `&T4`
  --> tests/ui/let_destructuring_has_rest.rs:32:10
   |
32 | #[derive(Template)]
   |          ^^^^^^^^ unknown field
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
